browser/themes/windows/browser.css
@import url("chrome://global/skin/");

@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
@namespace html url("http://www.w3.org/1999/xhtml");

%include ../shared/browser.inc
%include windowsShared.inc
%filter substitution
%define toolbarShadowColor hsla(209,67%,12%,0.35)
%define fgTabBackgroundMiddle linear-gradient(transparent, transparent 2px, -moz-dialog 2px, -moz-dialog)
%define navbarTextboxCustomBorder border-color: rgba(0,0,0,.32);
%define navbarLargeIcons #navigator-toolbox[iconsize=large] > #nav-bar
%define forwardTransitionLength 150ms
%define conditionalForwardWithUrlbar window:not([chromehidden~=toolbar]) #navigator-toolbox[iconsize=large] > :-moz-any(#nav-bar[currentset*="unified-back-forward-button,urlbar-container"],#nav-bar:not([currentset])) > #nav-bar-customizationtarget > #unified-back-forward-button
%define conditionalForwardWithUrlbarWidth 27

#menubar-items {
  -moz-box-orient: vertical; 
}

#main-menubar {
  -moz-box-flex: 1; 
}




#toolbar-menubar:not([inactive]) ~ #TabsToolbar {
  margin-top: 3px;
}

#main-window[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
  margin-top: 15px;
}

#toolbar-menubar:not([autohide="true"]) {
  -moz-binding: url("chrome://browser/content/customizableui/toolbar.xml#toolbar-drag");
}

#navigator-toolbox {
  -moz-appearance: none;
  background-color: transparent;
  border-top: none;
}

#navigator-toolbox::after {
  content: "";
  display: -moz-box;
  -moz-box-ordinal-group: 101; 
  height: 1px;
  background-color: ThreeDShadow;
}

#navigator-toolbox > toolbar:not(:-moz-lwtheme) {
  -moz-appearance: none;
  border-style: none;
  background-color: -moz-Dialog;
}

%ifdef WINDOWS_AERO
@media not all and (-moz-windows-compositor) {
%endif
  #toolbar-menubar {
    background-color: transparent !important;
  }

  #main-window[tabsintitlebar][sizemode="maximized"] #toolbar-menubar[inactive] ~ #TabsToolbar:not(:-moz-lwtheme) {
    background: linear-gradient(to top, @toolbarShadowColor@ 2px, transparent 2px),
                linear-gradient(rgba(50%,50%,50%,0), ActiveCaption 85%);
    color: CaptionText;
  }
  #main-window[tabsintitlebar][sizemode="maximized"] #toolbar-menubar[inactive] ~ #TabsToolbar:not(:-moz-lwtheme):-moz-window-inactive {
    background: linear-gradient(to top, @toolbarShadowColor@ 2px, transparent 2px),
                linear-gradient(rgba(50%,50%,50%,0), InactiveCaption 85%);
    color: InactiveCaptionText;
  }
  #TabsToolbar:-moz-lwtheme {
    background: linear-gradient(to top, @toolbarShadowColor@ 2px, transparent 2px);
  }
  #main-window[tabsintitlebar] #titlebar:-moz-lwtheme {
    visibility: hidden;
  }
  #main-window[tabsintitlebar] #titlebar-content:-moz-lwtheme {
    -moz-binding: url("chrome://global/content/bindings/general.xml#windowdragbox");
    visibility: visible;
  }
%ifdef WINDOWS_AERO
}
%endif

#nav-bar,
#nav-bar[collapsed=true] + toolbar,
#nav-bar[collapsed=true] + #customToolbars + #PersonalToolbar {
  background-image: linear-gradient(@toolbarHighlight@, rgba(255,255,255,0));
  box-shadow: 0 1px 0 @toolbarHighlight@ inset;
  margin-top: -1px; 
  
  position: relative;
  z-index: 1;
}

#nav-bar-overflow-button {
  -moz-image-region: rect(-5px, 12px, 11px, -4px);
}

#widget-overflow-list > .overflowedItem {
  width: 100%;
  min-height: 36px;
  background-repeat: no-repeat;
  background-position: 0 center;
}

#widget-overflow-list > .overflowedItem > .toolbarbutton-text {
  -moz-padding-start: 10px;
  text-align: start;
}

#personal-bookmarks {
  min-height: 24px;
}

#print-preview-toolbar:not(:-moz-lwtheme) {
  -moz-appearance: toolbox;
}

#browser-bottombox:not(:-moz-lwtheme) {
  background-color: -moz-dialog;
}

%ifndef WINDOWS_AERO
@media (-moz-windows-default-theme) {
  #main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar {
    margin-top: 4px;
  }
}
%endif



#main-window[sizemode="normal"] > #titlebar {
  -moz-appearance: -moz-window-titlebar;
}

#main-window[sizemode="maximized"] > #titlebar {
  -moz-appearance: -moz-window-titlebar-maximized;
}

@media (-moz-windows-classic) {
  #main-window[tabsintitlebar][sizemode="normal"] > #tab-view-deck > #browser-panel > #navigator-toolbox > #toolbar-menubar {
    margin-top: 4px;
  }
}







#titlebar-buttonbox {
  z-index: 1;
}

.titlebar-placeholder[type="appmenu-button"] {
  margin-left: 4px;
}

.titlebar-placeholder[type="caption-buttons"] {
%ifdef WINDOWS_AERO
  margin-left: 22px; 
%else
  margin-left: 10px;
%endif
}



#titlebar-min {
  -moz-appearance: -moz-window-button-minimize;
}

#titlebar-max {
  -moz-appearance: -moz-window-button-maximize;
}

#main-window[sizemode="maximized"] #titlebar-max {
  -moz-appearance: -moz-window-button-restore;
}

#titlebar-close {
  -moz-appearance: -moz-window-button-close;
}

@media not all and (-moz-windows-classic) {
  #titlebar-min {
    -moz-margin-end: 2px;
  }
}



toolbarbutton.bookmark-item {
  margin: 0;
  padding: 2px 3px;
}

toolbarbutton.bookmark-item:hover:active:not([disabled="true"]),
toolbarbutton.bookmark-item[open="true"] {
  padding-top: 3px;
  padding-bottom: 1px;
  -moz-padding-start: 4px;
  -moz-padding-end: 2px;
}

.bookmark-item:not(#bookmarks-menu-button) > .toolbarbutton-icon {
  width: 16px;
  height: 16px;
}

#PlacesToolbarItems > .bookmark-item:not([image]):not([label=""]):not([container]) > .toolbarbutton-icon {
  display: none;
}


.bookmark-item > .toolbarbutton-text {
  display: -moz-box !important;
}

.bookmark-item > .toolbarbutton-menu-dropmarker {
  display: none;
}

#wrapper-personal-bookmarks[place="palette"] > .toolbarpaletteitem-box {
  background: url("chrome://browser/skin/places/bookmarksToolbar.png") no-repeat center;
}

.bookmarks-toolbar-customize {
  max-width: 15em !important;
  list-style-image: url("chrome://browser/skin/places/bookmarksToolbar.png") !important;
}



menu.bookmark-item,
menuitem.bookmark-item {
  min-width: 0;
  max-width: 32em;
}
/* ... */

